--- a/page/style.css
+++ b/page/style.css
@@ -19,6 +19,7 @@ body{
     position: absolute;
 }
 .logo{
+    padding: 20px;
     width:100px;
     border-radius:20px;
     margin: 20px 0px 0px 20px;
